# quesadilla

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  changelog.md  pyproject.toml  readme.md  requirements.txt
takenote/: __init__.py  __main__.py  cli.py  config.py  core.py  lib.py  main.py  note.py  templates.py
takenote/cli/: __init__.py  app.py  functions.py  main.py  output.py
takenote/conf/: default-config.toml
takenote/note/: __init__.py  io.py  note.py
takenote/note/template/: __init__.py  functions.py  objects.py
takenote/resources/: default-config.toml
takenote/resources/default-templates/: default.md  link-note.md  link.md  new-note.md
takenote/template/: __init__.py  functions.py  objects.py
tests/: build-install.bash  local-config-test.bash  simple-test.bash  templates-test.bash  test_io.py
