[tool.poetry]
name = "takenote"
version = "4.1.3"
description = "Note taking terminal app, for integration with obsidian."
authors = ["proximalf <proximalfuture@gmail.com>"]
license = "MIT"
readme = "readme.md"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
packages = [
    { include = "takenote" }
]

[tool.poetry.scripts]
tn = "takenote:cli"

[tool.poetry.urls]
repository = "https://github.com/proximalf/ubiquitous-octo-disco"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
dynaconf = "^3.1.11"
jinja2 = "^3.1.2"
pyperclip = "^1.8.2"

[tool.poetry.group.dev.dependencies]
mypy = "^0.990"
commitizen = "^2.37.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "4.1.3"
changelog_file = "changelog.md"
version_files = [
   "pyproject.toml:version",
   "takenote/__version__.py"
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
# A: flake8-annotations
# C: flake8-comprehensions
# D: pydocstyle
# E: pycodestyle
# F: pyflakes
# N: pep8-naming
# T: flake8-print
select = ["A", "C", "D", "E", "F", "N", "T"]
ignore = [
    # Docstyle and codestyle
    "A002", # BuiltinArgumentShadowing
    "A003", # BuiltinAttributeShadowing
    "D100", # PublicModule
    "D200", # FitsOnOneLine
    "D202", # NoBlankLineAfterFunction
    "D203", # OneBlankLineBeforeClass
    "D205", # BlankLineAfterSummary
    "D212", # MultiLineSummaryFirstLine
    "D400", # EndsInPeriod
    "D409", # SectionUnderlineMatchesSectionLength
    "D411", # BlankLineBeforeSection
    "D415", # EndsInPunctuation
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
mypy_path = "takenote"
ignore_missing_imports = true
