[tool.poetry]
name = "takenote"
version = "6.0.0"
description = "Note taking terminal app, for integration with obsidian."
authors = ["proximalf <proximalfuture@gmail.com>"]
license = "MIT"
readme = "readme.md"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
packages = [
    { include = "takenote" }
]

[tool.poetry.scripts]
tn = "takenote:cli"

[tool.poetry.urls]
repository = "https://github.com/proximalf/quesadilla"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
dynaconf = "^3.1.11"
jinja2 = "^3.1.2"
pyperclip = "^1.8.2"
loguru = "^0.7.2"
pyyaml = "^6.0.1"
markdown-it-py = {extras = ["all"], version = "^3.0.0"}
mdit-py-plugins = "^0.4.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.990"
commitizen = "^2.37.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "6.0.0"
changelog_file = "changelog.md"
update_changelog_on_bump = true
version_files = [
    "pyproject.toml:version",
    "takenote/__version__.py",
    "takenote/resources/default-config.toml:version"
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = ["A", "C", "D", "E", "F", "N", "T"]
ignore = [
    "A002", # BuiltinArgumentShadowing
    "A003", # BuiltinAttributeShadowing
    "D100", # PublicModule
    "D200", # FitsOnOneLine
    "D202", # NoBlankLineAfterFunction
    "D203", # OneBlankLineBeforeClass
    "D205", # BlankLineAfterSummary
    "D212", # MultiLineSummaryFirstLine
    "D301", # Use r""" if any backslashes in a docstring
    "D400", # EndsInPeriod
    "D409", # SectionUnderlineMatchesSectionLength
    "D411", # BlankLineBeforeSection
    "D415", # EndsInPunctuation
    "D416", # Section Name should end with a colon
    "D104", # Missing docstring in public package
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
mypy_path = "takenote"
ignore_missing_imports = true
